# tweaktool

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  DEPENDENCIES.md  Dockerfile  LICENSE  README.md  build-debs.sh  build-with-docker.sh  check-build-configurations.sh  concerto.mak  docker-compose.yml  libtweak2.gpj  pyproject.toml  setup.py
cmake/: AppendToGlobalList.cmake  Asan.cmake  FindRPMSG.cmake  FindReadline.cmake  FindTIOVX.cmake  Finduthash.cmake  TweakComponentInstall.cmake  componentConfig.cmake.in  concerto.mak.in  generate_version.cmake  projectConfig.cmake.in  qnx_7.0.0_linux_x86_64.cmake  tda4_bsp7_cgt_arm.toolchain.cmake  tda4_bsp_8.02_cgt_armllvm.toolchain.cmake  tda4_bsp_8.04_cgt_armllvm.toolchain.cmake  tda4_bsp_8.1_cgt_armllvm.toolchain.cmake  tda4_bsp_8_cgt_armllvm.cmake  tda4_j721s2_bsp_8.04_cgt_armllvm.toolchain.cmake  tda4_linux.toolchain.cmake  tweakComponentInstall.cmake  version.h.in
cmake/external-usage-test/: CMakeLists.txt  main.cpp
devops/: Dockerfile  Jenkinsfile  build-debs.sh  build-nng-debs.sh  build-with-docker.sh  check-build-configurations.sh  check-copyright-base.awk  check-copyright-c.awk  check-copyright-py.awk  check-copyright.sh
docs/: APP-LAYER.md  BUILD_QNX.md  CMakeLists.txt  COMPONENTS.md  DESIGN.md  Doxyfile.in  INTEGRITY.md  METADATA.md  PROTOCOL_APP.md  PROTOCOL_INIT.md  PROTOCOL_WIRE.md  REQUIREMENTS.md  TWEAK-GW.md  customdoxygen.css  tweak-app-cl.md
docs/user/: tweak-app-cl.asciidoc  user-manual.asciidoc
examples/use-case-tweak-1/: CMakeLists.txt  main.c
packaging/: CMakeLists.txt  generators.cmake  generators.cmake.in  tweak.desktop.in
tweak-app/: CMakeLists.txt
tweak-app-cl/: CMakeLists.txt  concerto.mak
tweak-app-cl/src/: main.c  metadatautil.c  metadatautil.h  stringutil.c  stringutil.h  tweakuriutil.c  tweakuriutil.h
tweak-app-cl/test/: CMakeLists.txt  disconnected.exp  fixture.exp  help.exp  list.exp  multiconnect.exp  reconnect.exp
tweak-app/include/tweak2/: appclient.h  appcommon.h  appserver.h
tweak-app/src/: tweakappclient.c  tweakappcommon.c  tweakappfeatures.c  tweakappfeatures.h  tweakappinternal.h  tweakappqueue.c  tweakappqueue.h  tweakappserver.c  tweakmodel.c  tweakmodel.h  tweakmodel_uri_to_tweak_id_index.c  tweakmodel_uri_to_tweak_id_index.h
tweak-app/test/test-app/: CMakeLists.txt  test-app.c
tweak-app/test/test-features/: CMakeLists.txt  test-features.c
tweak-app/test/test-queue/: CMakeLists.txt  test-queue.c
tweak-app/test/test-tweakmodel/: CMakeLists.txt  test-tweakmodel.c
tweak-app/test/test-uri-to-index/: CMakeLists.txt  test-uri-to-index.c
tweak-common/: CMakeLists.txt
tweak-common/include/tweak2/: buffer.h  defaults.h  log.h  string.h  thread.h  types.h  util.h  variant.h
tweak-common/src/: tweak_id_gen_atomic_add_value.c  tweak_id_gen_fallback.c  tweak_id_gen_sync_fetch_and_add.c  tweak_id_gen_sysbios.c  tweak_id_gen_winapi.c  tweak_id_gen_zephyr.c  tweakbuffer.c  tweaklog.c  tweaklog_format_time_posix.c  tweaklog_format_time_tda4.c  tweaklog_format_time_winapi.c  tweaklog_format_time_zephyr.c  tweaklog_out_stderr.c  tweaklog_out_tda4.c  tweaklog_out_tiovx.c  tweaklog_thread_id_common.c  tweaklog_thread_id_fallback.c  tweaklog_thread_id_linux_syscall.c  tweaklog_thread_id_pthread_np.c  tweaklog_thread_id_sysbios.c  tweaklog_thread_id_winapi.c  tweaklog_thread_id_zephyr.c  tweaklog_unix.c  tweakstring.c  tweakvariant.c
tweak-common/test/: CMakeLists.txt  main.c
tweak-common/test/test-string/: CMakeLists.txt  main.c
tweak-common/test/test-variant/: CMakeLists.txt  main.cpp  variant.hpp  variant_init_int.hpp
tweak-gui-qml/: .clang-format  CMakeLists.txt
tweak-gui-qml/resources/: AutoSelectControl.qml  ConnectionsPage.qml  ItemButton.qml  Tweak.qml  TweakButton.qml  TweakDetails.qml  TweakEditorBase.qml  TweakEditorBox.qml  TweakEditorButton.qml  TweakEditorEnum.qml  TweakEditorLabel.qml  TweakEditorScalar.qml  TweakEditorToggle.qml  TweakEnum.qml  TweakLabel.qml  TweakScalar.qml  TweakScrollBar.qml  TweakToggle.qml  TweakToolButton.qml  TweaksList.qml  TweaksPage.qml  ValidatedTextField.qml  main.qml  main.qrc  main.rc  qtquickcontrols2.conf
tweak-gui-qml/src/: QTweakVariant.hpp  TweakComponents.cpp  TweakComponents.hpp  TweakMetadataParser.cpp  TweakMetadataParser.hpp  TweakQmlApp.cpp  TweakQmlApp.hpp  TweakQmlApp_p.hpp  TweakTreeModel.cpp  TweakTreeModel.hpp  TweakUriTree.cpp  TweakUriTree.hpp  main.cpp
tweak-gui-qml/test/qtweakvariant/: CMakeLists.txt  QTweakVariant.test.cpp
tweak-gui-qml/test/tweakguitest/: CMakeLists.txt  main.cpp  tst_ConnectionsPage.qml
tweak-gui-qml/test/tweakmetadata/: CMakeLists.txt  TweakMetadata.test.cpp
tweak-gui-qml/test/tweaknodetree/: CMakeLists.txt  TweakNodeTree.test.cpp
tweak-gui-qml/test/tweakqmlapp/: CMakeLists.txt  TweakQmlApp.test.cpp
tweak-gw/: CMakeLists.txt  concerto.mak  main.c  tweak-gw.service
tweak-json/: CMakeLists.txt
tweak-metadata/: CMakeLists.txt
tweak-metadata/include/tweak2/: metadata.h
tweak-metadata/src/: tweakmetadata.c
tweak-metadata/test/usecases/: CMakeLists.txt  main.c
tweak-mock-server/: main.cpp  (+1 more)
tweak-py/: CMakeLists.txt  __init__.py  __init__.py.in  example.py  gil_loop.cpp  gil_loop.hpp  py_tweak.cpp  py_tweak_client.cpp  py_tweak_client.hpp  py_tweak_common.cpp  py_tweak_common.hpp  py_tweak_server.cpp  py_tweak_server.hpp  raii.hpp
tweak-py/tests/: test.py
tweak-wire/: CMakeLists.txt
tweak-wire/include/tweak2/: wire.h
tweak-wire/src/: tweakwire.c  tweakwire_nng.c  tweakwire_nng.h  tweakwire_rpmsg.c  tweakwire_rpmsg.h  tweakwire_rpmsg_transport.h  tweakwire_rpmsg_transport_linux.c  tweakwire_rpmsg_transport_sysbios.c  tweakwire_rpmsg_transport_ti_api.c
tweak-wire/test/: CMakeLists.txt  main.c
tweak1lib/: CMakeLists.txt
tweak1lib/include/: tweak.h  tweakconfig.h
tweak1lib/mockserver/: CMakeLists.txt  main.c
tweak1lib/src/: tweakcompat.c
tweak1lib/test/: CMakeLists.txt  main.c
tweak2lib/: CMakeLists.txt
tweak2lib/include/: tweak2.h
tweak2lib/include/tweak2/: tweak2.h
tweak2lib/src/: tweak2.c
(+74 files in other folders)
